# kokkos-benchmark

./: CMakeLists.txt  matrix-based-petsc.cc  matrix-based-trilinos.cc  matrix-free-cpu.cc  matrix-free-kokkos.cc  run.sh
